# RealFlight_ros

./: .gitignore  README.md  run.sh
launch/: sitl_hover_test.launch  sitl_single_drone.launch  sitl_track_test.launch
scripts/: compare_circle_results.py  test_data_reader.py  vis_target_position.py  vis_traj.py  vis_vel_error.py  vis_vel_predict.py  vis_weight_change.py  visualize.py
src/hover_test/: CMakeLists.txt  package.xml
src/hover_test/config/: tflite_model.yaml  tflite_model_50hz.yaml
src/hover_test/include/hover_test/: hover_test_node.hpp  hover_test_node_50hz.hpp  tflite_policy.hpp  tflite_policy_50hz.hpp
src/hover_test/launch/: hover_test.launch  tflite_neural_control.launch  tflite_neural_control_50hz.launch
src/hover_test/src/: hover_test_main.cpp  hover_test_main_50hz.cpp  hover_test_node.cpp  hover_test_node_50hz.cpp
src/offboard_state_machine/: package.xml
src/offboard_state_machine/config/: fsm_hover.yaml  fsm_traj.yaml
src/offboard_state_machine/include/offboard_state_machine/: offboard_fsm_node.hpp  utils.hpp
src/offboard_state_machine/launch/: single_drone.launch  single_drone_goto.launch  single_drone_test.launch
src/offboard_state_machine/src/: offboard_fsm_node.cpp
src/track_test/: CMakeLists.txt  package.xml
src/track_test/config/: target_publisher_params.yaml  target_publisher_params_dshape.yaml  target_publisher_params_figure8.yaml  tflite_model.yaml  trackVer13_policyVer0.tflite  trackVer13_policyVer1.tflite  trackVer13_policyVer2.tflite  trackVer13_policyVer3.tflite  trackVer13_policyVer4.tflite  trackVer13_policyVer5.tflite  trackVer16_policyVer0.tflite  trackVer16_policyVer1.tflite  trackVer16_policyVer11.tflite  trackVer16_policyVer4.tflite  trackVer16_policyVer5.tflite  trackVer17_policyVer1.tflite
src/track_test/include/track_test/: target_generator.hpp  target_publisher_node.hpp  tflite_policy.hpp  track_test_node.hpp
src/track_test/launch/: target_publisher.launch  tflite_neural_control.launch  track_test.launch
src/track_test/src/: target_generator.cpp  target_publisher_main.cpp  target_publisher_node.cpp  track_test_main.cpp  track_test_node.cpp
src/tracking_visualizer/: README.md  package.xml
src/tracking_visualizer/config/: tracking_visualization.rviz  visualizer_params.yaml
src/tracking_visualizer/include/tracking_visualizer/: tracking_visualizer_node.hpp
src/tracking_visualizer/launch/: tracking_visualizer.launch
src/tracking_visualizer/src/: tracking_visualizer_node.cpp
test_log/: circle.csv  circle_add_weight.csv  circle_reduce_weight.csv  type8.csv  type8_no_vel.csv  typeD.csv  typeD_no_vel.csv
